@@ -1,0 +1,7 @@
+Boot Process:
+
+1. UEFI Exis Loader (UEFIEXL)
+- Load main kernel module (Exis) into memory
+
+
+-> Exis main function executing.
